istio-manifests/mTLS.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-mode
  namespace: boutique-app
spec:
  mtls:
    mode: STRICT
