istio-manifests/DestinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: productcatalog-service
  namespace: boutique-app

spec:
  host: productcatalogservice

  subsets:
  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2
