istio-manifests/circuit-breaker.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: circuit-breaker
  namespace: boutique-app

spec:
  host: productcatalogservice

  trafficPolicy:

    connectionPool:

      tcp:
        maxConnections: 1

      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1

    outlierDetection:
      consecutive5xxErrors: 3
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
